# documentation

./: .gitignore  .gitleaks.toml  .gitmodules  .oxfmtrc.json  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  Dockerfile  Makefile  README.md  astro.config.mjs  bunfig.toml  content.config.ts  docker-compose.yml  eslint.config.mjs  nuxt.config.ts  oxlintrc.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prek.toml  release-please-config-prerelease.json  release-please-config-release.json  release-please-manifest.json  vitest.config.ts
.github/: copilot.instructions.md  dependabot.yml
.github/instructions/: code-blocks.instructions.md  components.instructions.md  copilot-instructions.md  copilot.instructions.md  documentation.instructions.md  images.instructions.md  nuxt-content-content-render.instructions.md  nuxt-routing.instructions.md  nuxt-ui-modal.instructions.md  nuxt-ui-table.instructions.md  syntax.instructions.md
.github/release/: release-please-config-release.json  release-please-config.json
.husky/: pre-commit
app/: app.config.ts
apps/server/: pyproject.toml
apps/server/src/: main.py
apps/server/src/routes/: router.py  translate.py  translations.py
apps/server/src/utils/: logger.py
config/: .oxfmtrc.json  oxlintrc.json
dev/: fastapi.md  nextjs.md  ruff.md  uv.md
devops/: docker.md  firewall.md  github.md  hosting.md  kubernetes.md
docs/: .vitepressrc.json
docs/devops/: git.md
linux/: debian.md  fail2ban.md  ssh.md  ubuntu.md  ufw.md
python/: ruff.md
scripts/: typecheck.sh
src/: content.config.ts
(+226 files in other folders)
