[project]
name = "doc-translator"
version = "0.1.0"
description = "A translator ai project for documentation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.32",
    "marked>=0.9.1",
    "ollama>=0.5.3",
    "openai>=1.106.1",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.5",
]

[tool.uv.pip]
upgrade = true

[dependency-groups]
dev = [
    "tomli-w>=1.2.0",
]
